removed opencv dependencies and functions using them (affine transform function). also removed depricated code file and synthetic data generator

--- a/PYTHON/ToxicityClustering.ipynb
+++ b/PYTHON/ToxicityClustering.ipynb
@@ -2,9 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /media/andrew/DATA/git_repos/CAMP-RT/PYTHON/PatientSet.py:8: The name tf.set_random_seed is deprecated. Please use tf.compat.v1.set_random_seed instead.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from numpy.random import seed\n",
     "seed(1)\n",
@@ -43,9 +59,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "F:\\Skool\\EVL_Research\\CAMP-RT\\PYTHON\\Patient.py:360: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/media/andrew/DATA/git_repos/CAMP-RT/PYTHON/Patient.py:360: RuntimeWarning: invalid value encountered in true_divide\n",
       "  mean_tumor_distances /= tumor_volume\n",
-      "F:\\Skool\\EVL_Research\\CAMP-RT\\PYTHON\\Patient.py:361: RuntimeWarning: invalid value encountered in true_divide\n",
+      "/media/andrew/DATA/git_repos/CAMP-RT/PYTHON/Patient.py:361: RuntimeWarning: invalid value encountered in true_divide\n",
       "  tumor_position /= tumor_volume\n"
      ]
     },
@@ -53,31 +69,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error reading tumor volume for  10041\n",
       "error reading tumor volume for  10091\n",
-      "error reading tumor volume for  10148\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "W1002 19:35:16.189178 10824 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "error reading tumor volume for  10148\n",
+      "WARNING:tensorflow:From /home/evl/andrew/anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
       "\n",
-      "W1002 19:35:16.190178 10824 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "WARNING:tensorflow:From /home/evl/andrew/anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
       "\n",
-      "W1002 19:35:16.194178 10824 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:133: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
+      "WARNING:tensorflow:From /home/evl/andrew/anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:133: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
       "\n",
-      "W1002 19:35:16.201179 10824 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4115: The name tf.random_normal is deprecated. Please use tf.random.normal instead.\n",
+      "WARNING:tensorflow:From /home/evl/andrew/anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:4115: The name tf.random_normal is deprecated. Please use tf.random.normal instead.\n",
       "\n",
-      "W1002 19:35:16.291184 10824 deprecation_wrapper.py:119] From F:\\Anaconda\\lib\\site-packages\\keras\\optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "WARNING:tensorflow:From /home/evl/andrew/anaconda3/lib/python3.7/site-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n",
       "\n",
       "patient data loaded...\n",
       "\n"
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +123,7 @@
     "\n",
     "#number of times to resample and doing feature selection\n",
     "#if n = 1, just use the first result\n",
-    "n_samples = 1\n",
+    "n_samples = 1000\n",
     "df_rescale = Metrics.normalize\n",
     "\n",
     "#put some bounds on the features to subset\n",
@@ -143,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -152,39 +155,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "toxicity\n",
-      "['Soft_Palate_tsimdoses', 'Extended_Oral_Cavity_tsimdoses']\n",
-      "3.825051386741052e-11\n",
+      "['Extended_Oral_Cavity_tsimdoses', 'Mandible_tsimdoses']\n",
+      "7.587523320595757e-05\n",
       "\n",
-      "\n",
-      "\n",
-      "[[ 6. 13.]\n",
-      " [58.  5.]\n",
-      " [71.  2.]\n",
-      " [31. 14.]]\n",
-      "3.825053173481988e-11\n",
-      "number of features:  2\n",
-      "l1_weighted4\n",
-      "[[ 6. 13.]\n",
-      " [58.  5.]\n",
-      " [71.  2.]\n",
-      " [31. 14.]]\n",
-      "correlation:  3.825053173481988e-11\n",
-      "rand score:  0.11630804448702563 \n",
+      "['Extended_Oral_Cavity_tsimdoses', 'Mandible_tsimdoses', 'Soft_Palate_tsimdoses']\n",
+      "5.767911291743033e-05\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "F:\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:50: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
     }
    ],
@@ -253,38 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "Index(['Soft_Palate_tsimdoses', 'Extended_Oral_Cavity_tsimdoses'], dtype='object')\n",
-      "l1_weighted4\n",
-      "[[ 6. 13.]\n",
-      " [58.  5.]\n",
-      " [71.  2.]\n",
-      " [31. 14.]]\n",
-      "correlation:  3.825053173481988e-11\n",
-      "rand score:  0.11630804448702563 \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "F:\\Anaconda\\lib\\site-packages\\ipykernel_launcher.py:25: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -315,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,6 +271,13 @@
     "    combined_df.to_csv(save_root\n",
     "                 + 'metaClusteringBootstrapped.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -352,5 +307,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
