--- a/PYTHON/ToxicityClustering.ipynb
+++ b/PYTHON/ToxicityClustering.ipynb
@@ -2,25 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /media/andrew/DATA/git_repos/CAMP-RT/PYTHON/PatientSet.py:8: The name tf.set_random_seed is deprecated. Please use tf.compat.v1.set_random_seed instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numpy.random import seed\n",
     "seed(1)\n",
@@ -35,6 +19,7 @@
     "from dependencies.Boruta import BorutaPy\n",
     "from Clustering import *\n",
     "import re\n",
+    "import copy\n",
     "\n",
     "#sklearn dependencies\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
@@ -123,7 +108,7 @@
     "\n",
     "#number of times to resample and doing feature selection\n",
     "#if n = 1, just use the first result\n",
-    "n_samples = 1000\n",
+    "n_samples = 300\n",
     "df_rescale = Metrics.normalize\n",
     "\n",
     "#put some bounds on the features to subset\n",
@@ -155,13 +140,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "toxicity\n",
-      "['Extended_Oral_Cavity_tsimdoses', 'Mandible_tsimdoses']\n",
-      "7.587523320595757e-05\n",
-      "\n",
-      "['Extended_Oral_Cavity_tsimdoses', 'Mandible_tsimdoses', 'Soft_Palate_tsimdoses']\n",
-      "5.767911291743033e-05\n",
-      "\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "toxicity\n"
      ]
     }
    ],
@@ -177,7 +158,7 @@
     "    \n",
     "    #remove eyeball stuff from the candidates since those are missing in some patients\n",
     "    #and it messes up the feature selection due to that noise\n",
-    "    organs = copy(Constants.organ_list)\n",
+    "    organs = copy.copy(Constants.organ_list)\n",
     "    for o in Constants.organ_list:\n",
     "        if re.search('Eyeball', o) is not None:\n",
     "            organs.remove(o)\n",
