--- a/PYTHON/ToxicityClustering.ipynb
+++ b/PYTHON/ToxicityClustering.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,14 +124,17 @@
     "\n",
     "#number of times to resample and doing feature selection\n",
     "#if n = 1, just use the first result\n",
-    "n_samples = 600\n",
-    "df_rescale = Metrics.normalize\n",
+    "n_samples = 300\n",
+    "df_rescale = lambda x: x #Metrics.normalize\n",
     "\n",
     "#put some bounds on the features to subset\n",
     "min_features = 2\n",
     "\n",
     "#for now just constrain it to one cluster\n",
     "n_clusters = 4\n",
+    "\n",
+    "#number of cpus to use when running the feature selection\n",
+    "n_jobs = 8\n",
     "\n",
     "#make this none if you don't want to cluster the features\n",
     "#otherwise give a number of clusters to group them, \n",
@@ -151,7 +154,17 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "toxicity\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -182,7 +195,8 @@
     "    selection_clusterer  = FClusterer(n_clusters)\n",
     "    feature_selector = FeatureClusterSelector(\n",
     "        n_samples = n_samples,\n",
-    "        clusterer = selection_clusterer).fit(train, toxicity)\n",
+    "        model = selection_clusterer,\n",
+    "        n_jobs = n_jobs).fit(train, toxicity)\n",
     "    to_use = feature_selector.transform(test)\n",
     "    labels = feature_selector.predict_labels(train, toxicity)\n",
     "    print()\n",
@@ -221,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
+    "lambda x: x #%load_ext autoreload\n",
     "%autoreload 2\n",
     "from Clustering import *\n",
     "\n",
@@ -258,83 +272,6 @@
     "    combined_df.to_csv(save_root\n",
     "                 + 'metaClusteringBootstrapped600.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.toxicity\n",
-    "In [ ]:\n",
-    "￼\n",
-    "​\n",
-    "In [ ]:\n",
-    "￼\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
