--- a/PYTHON/ToxicityClustering.ipynb
+++ b/PYTHON/ToxicityClustering.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,14 +124,11 @@
     "\n",
     "#number of times to resample and doing feature selection\n",
     "#if n = 1, just use the first result\n",
-    "n_samples = 300\n",
-    "df_rescale = lambda x: x #Metrics.normalize\n",
-    "\n",
-    "#put some bounds on the features to subset\n",
-    "min_features = 2\n",
+    "n_samples = 500\n",
+    "df_rescale = Metrics.normalize\n",
     "\n",
     "#for now just constrain it to one cluster\n",
-    "n_clusters = 4\n",
+    "n_clusters = 2\n",
     "\n",
     "#number of cpus to use when running the feature selection\n",
     "n_jobs = 8\n",
@@ -142,10 +139,7 @@
     "feature_clustering = None\n",
     "\n",
     "#where to save results, put None if you don't want to save\n",
-    "save_root = 'data/clustering_results/'\n",
-    "\n",
-    "#how to decide which clustering method is best.  shoud be 'rand_score' or 'correlation'\n",
-    "cluster_metric = 'correlation'"
+    "save_root = 'data/clustering_results/'\n"
    ]
   },
   {
@@ -176,7 +170,7 @@
     "    toxicity = getattr(db, tox_name) > 0\n",
     "    \n",
     "    #remove eyeball stuff from the candidates since those are missing in some patients\n",
-    "    #and it messes up the feature selection due to that noise\n",
+    "    #and it messe100s up the feature selection due to that noise\n",
     "    organs = copy.copy(Constants.organ_list)\n",
     "    for o in Constants.organ_list:\n",
     "        if re.search('Eyeball', o) is not None:\n",
@@ -192,7 +186,8 @@
     "    if df_rescale is not None:\n",
     "        train = df_rescale(train)\n",
     "        test = df_rescale(test)\n",
-    "    selection_clusterer  = FClusterer(n_clusters)\n",
+    "    selection_clusterer = BestClusterer()\n",
+    "#     selection_clusterer  = FClusterer(n_clusters, dist_func = l2)\n",
     "    feature_selector = FeatureClusterSelector(\n",
     "        n_samples = n_samples,\n",
     "        model = selection_clusterer,\n",
@@ -270,8 +265,15 @@
    "source": [
     "if save_root is not None:\n",
     "    combined_df.to_csv(save_root\n",
-    "                 + 'metaClusteringBootstrapped600.csv')"
+    "                 + 'metaClusteringBootstrapped500MinmaxBest.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
