--- a/PYTHON/ToxicityClustering.ipynb
+++ b/PYTHON/ToxicityClustering.ipynb
@@ -2,25 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /media/andrew/DATA/git_repos/CAMP-RT/PYTHON/preprocessing.py:11: The name tf.set_random_seed is deprecated. Please use tf.compat.v1.set_random_seed instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numpy.random import seed\n",
     "seed(1)\n",
@@ -51,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -72,16 +56,7 @@
      "text": [
       "error reading tumor volume for  10091\n",
       "error reading tumor volume for  10148\n",
-      "WARNING:tensorflow:From /home/evl/andrew/anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /home/evl/andrew/anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /home/evl/andrew/anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:133: The name tf.placeholder_with_default is deprecated. Please use tf.compat.v1.placeholder_with_default instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /home/evl/andrew/anaconda3/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py:4115: The name tf.random_normal is deprecated. Please use tf.random.normal instead.\n",
-      "\n",
-      "WARNING:tensorflow:From /home/evl/andrew/anaconda3/lib/python3.7/site-packages/keras/optimizers.py:790: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
-      "\n",
+      "error, no mean-organ distance file found\n",
       "\n",
       "patient data loaded...\n",
       "\n"
@@ -90,21 +65,41 @@
    ],
    "source": [
     "#load in the patientset object that has all the patient info\n",
-    "db = PatientSet()\n",
-    "\n",
-    "#add a bunch of features to the object that we'll want to try\n",
-    "#so we can use the db.to_dataframe function to get them all in a nice dataframe with one-hot encoding and labels automatically\n",
-    "db.t_volumes = np.array([np.sum([g.volume for g in gtvs]) for gtvs in db.gtvs]).reshape(-1,1)\n",
-    "db.tsimdoses = tsim_prediction(db)\n",
-    "db.bilateral = db.lateralities == 'B'\n",
-    "db.total_volumes = db.volumes.sum(axis = 1)\n",
-    "db.toxicity = db.feeding_tubes + db.aspiration > 0\n",
-    "db.xerostima = db.feeding_tubes + db.aspiration > 1"
+    "db = PatientSet()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(45, 45)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.organ_distances.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.add_features()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,21 +143,8 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "toxicity\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "from Clustering import *\n",
     "#our actual experiment, try to find correlations using the boruta method and such\n",
     "feature_list = []\n",
     "for tox_name in toxicities_to_test:\n",
@@ -230,11 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambda x: x #%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "from Clustering import *\n",
-    "\n",
-    "#get all the features found before and put them together\n",
+    "v2_high_throat_dose = [184, 276, 5084, 246, 289, 283, 5068, 197, 5007, 100, 10054, 10, 145, 10199]#get all the features found before and put them together\n",
     "combined_df = feature_list[0]\n",
     "if len(feature_list) > 1:\n",
     "    for i in range(1, len(feature_list)):\n",
@@ -281,18 +259,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
